--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ keywords = []
 packages = [ { include = "volttron", from = "src" } ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
-modbus-tk = "^1.1.2"
+python = "^3.10"
+modbus-tk = "^1.1.3"
 pyserial = "^3.5"
 PyYAML = "^6.0"
 volttron-lib-base-driver = {git = "https://github.com/VOLTTRON/volttron-lib-base-driver.git", branch = "develop"}
@@ -53,3 +53,18 @@ ignore_patterns = [
     "dist/**",
     "docs/**"
 ]
+
+[tool.mypy]
+python_version = 3.10
+show_error_context = true
+pretty = true
+show_column_numbers = true
+warn_return_any = true
+warn_unused_configs = true
+
+[[tool.mypy.overrides]]
+module = [
+    "yaml",
+    "six"
+]
+ignore_missing_imports = true
